outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval2809995958700694097_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (centrality and degree) using a temperature-based weighting, but replaces the linear decay with a sigmoid temperature function to better balance exploration and exploitation. It also incorporates a "proximity bonus" that rewards nodes closer to the destination in earlier stages, and a "diversity penalty" to avoid revisiting similar regions.}
                                                                                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (centrality and degree) using a temperature-based weighting, but replaces the linear decay with a sigmoid temperature function to better balance exploration and exploitation. It also incorporates a "proximity bonus" that rewards nodes closer to the destination in earlier stages, and a "diversity penalty" to avoid revisiting similar regions.}
                                                                                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
